Fix text selection on Firefox

--- a/reset.scss
+++ b/reset.scss
@@ -158,6 +158,7 @@ sub {
 // @see https://twitter.com/miketaylr/status/12228805301
 ::selection,
 ::-moz-selection {
+  background-color: #B4D5FE;
   text-shadow: none !important;
 }
 
